--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "private": true,
   "name": "adriansan-ui",
   "description": "A personal portfolio project located at adrian-s.com",
-
   "devDependencies": {
-    "http-server": "^0.6.1", 
-    "bower": "^1.3.1"
+    "bower": "^1.3.1",
+    "grunt": "^0.4.5",
+    "http-server": "^0.6.1",
+    "open": "0.0.5",
+    "shelljs": "^0.5.1"
   },
-
   "scripts": {
     "postinstall": "bower install",
     "prestart": "npm install",
-    "start": "http-server -a 0.0.0.0 -p 8000"
+    "start": "echo 'build command in here'",
+    "aws": "grunt push:aws",
+    "server": "http-server -a 0.0.0.0 -p 8000",
+    "open-dev": "open http://localhost:8000/",
+    "build-dev": "grunt push:static:dev"
   }
 }
