Grunt: added minify, concat and inject bower scripts

--- a/bower.json
+++ b/bower.json
@@ -4,22 +4,22 @@
   "version": "1.0.0",
   "homepage": "http://www.adrian-s.com",
   "private": true,
-
   "dependencies": {
     "angular": "1.4.x",
     "angular-route": "1.4.x",
     "angular-resource": "1.4.x"
   },
-
   "authors": [
     "Adrian Sanoguel <adriansan1@gmail.com>"
   ],
-  
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "devDependencies": {
+    "grunt-contrib-concat": "~0.5.1"
+  }
 }
