--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "name": "adriansan-ui",
   "description": "A personal portfolio project located at adrian-s.com",
   "devDependencies": {
+    "bash-color": "0.0.3",
     "bower": "^1.3.1",
     "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-wiredep": "^2.0.0",
     "http-server": "^0.6.1",
     "open": "0.0.5",
     "shelljs": "^0.5.1"
@@ -16,9 +21,9 @@
     "start": "echo 'build command in here'",
     "aws": "grunt push:aws",
     "server": "http-server -a 0.0.0.0 -p 8000",
-    "open-dev": "open http://localhost:8000/",
-    "build-dev": "grunt push:static:dev",
-    "build-prod": "grunt push:static:dev"
-
+    "open-local": "open http://localhost:8000/",
+    "open-dev": "open http://development.adriancom-ui.divshot.io/",
+    "push-dev": "grunt push:static:dev",
+    "push-prod": "grunt push:static:dev"
   }
 }
